<resources>
    <string name="app_name">CowrywiseConveter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_desc">Image_desc</string>
    <string name="sign_up">Sign up</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home_header">Currency <br>Calculator</br></string>
    <string name="convert">Convert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_hint">From eg USD</string>
    <string name="to_hint">To eg NGN</string>
    <string name="retry">Retry</string>
    <string name="last_30">Past 30 days</string>
    <string name="last_90">Past 90 days</string>
    <string name="view_rate_history"><u>View rate history</u></string>
</resources>